force-app/src/objects/cpm__Refund__c.object
<CustomObject>
    <description>Refunds are amounts returned to customers for various reasons.</description>
    <fields>
        <fullName>cpm__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The account that requested the refund, taken from the related original Payment record.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Amount__c</fullName>
        <description>The refund amount. This may be less than or equal to Amount of the Originating Payment record amount.</description>
        <inlineHelpText>The amount of the refund. This must be less than or equal to the amount of the Originating Payment record.</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cpm__Comments__c</fullName>
        <description>Optional free text field for a more detailed explanation of the refund event. This field can be used as input, for example, for later follow up as part of an internal review process.</description>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contact that requested the refund, taken from the related original Payment record.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Installment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Installment record related to the refund request.</description>
        <inlineHelpText>The installment linked ot the originating payment.</inlineHelpText>
        <label>Installment</label>
        <referenceTo>cpm__Installment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Last_Status_Reason__c</fullName>
        <description>Details about the latest Status update for the record, received from the PSP or provided by FinDock.</description>
        <label>Last Status Reason</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cpm__Original_Payment_Reference__c</fullName>
        <description>Payment reference of the original payment being refunded, taken from the Payment record of the linked Installment record.</description>
        <formula>cpm__Originating_Payment__r.cpm__Payment_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The unique reference from the original, collected payment to be refunded.</inlineHelpText>
        <label>Original Payment Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Originating_Payment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Payment record that represents the original receivable transaction to be refunded.</description>
        <inlineHelpText>The original, positive payment, linked to a collected installment, that needs to be refunded.</inlineHelpText>
        <label>Originating Payment</label>
        <referenceTo>cpm__Payment__c</referenceTo>
        <relationshipLabel>Refunds</relationshipLabel>
        <relationshipName>Refunds</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Payment_Method__c</fullName>
        <description>The payment method used to pay the refund.</description>
        <inlineHelpText>The payment method used to pay the refund.</inlineHelpText>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Payment_Processor__c</fullName>
        <description>The payment processor used to process the refund transaction.</description>
        <inlineHelpText>The payment processor used to process the refund.</inlineHelpText>
        <label>Payment Processor</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Method__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Processor_Reference__c</fullName>
        <description>Refund payment reference provided by the PSP.</description>
        <externalId>true</externalId>
        <label>Processor Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Refund_Date__c</fullName>
        <description>Date the refund was confirmed.</description>
        <label>Refund Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>cpm__Refund_Payment__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Payment record the represents that refund transaction.</description>
        <inlineHelpText>The negative payment that records the successful refund to the payer.</inlineHelpText>
        <label>Refund Payment</label>
        <referenceTo>cpm__Payment__c</referenceTo>
        <relationshipLabel>Refund Payment</relationshipLabel>
        <relationshipName>RefundPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cpm__Refund_Reason__c</fullName>
        <description>Customizable picklist of refund reasons. Default values include Customer request, Duplicate and Other.</description>
        <inlineHelpText>The reason the refund has been created.</inlineHelpText>
        <label>Refund Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Duplicate</fullName>
                </value>
                <value>
                    <fullName>Customer request</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Refund_Reference__c</fullName>
        <description>Final payment reference for the refund transaction.</description>
        <inlineHelpText>The unique reference for tracking the refund.</inlineHelpText>
        <label>Refund Reference</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>cpm__Status__c</fullName>
        <description>Status of the refund transaction. Once the transaction is complete, the Refund record status is Refunded, and a Payment record is created and linked to the Refund record.</description>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Pending Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cpm__Target__c</fullName>
        <description>The target (merchant account) from which the refund payment is made.</description>
        <inlineHelpText>The (merchant) account used to pay the refund.</inlineHelpText>
        <label>Target</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>cpm__Payment_Processor__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Refund</label>
    <listViews>
        <fullName>cpm__All</fullName>
        <columns>NAME</columns>
        <columns>cpm__Originating_Payment__c</columns>
        <columns>cpm__Status__c</columns>
        <columns>cpm__Amount__c</columns>
        <columns>cpm__Payment_Processor__c</columns>
        <columns>cpm__Payment_Method__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RFND-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cpm__Refund_Amount_Validation</fullName>
        <active>true</active>
        <description>Refund amount must be greater than 0 and cannot exceed the original payment amount.</description>
        <errorConditionFormula>OR(cpm__Amount__c &lt;= 0, cpm__Amount__c &gt; cpm__Originating_Payment__r.cpm__Amount__c)</errorConditionFormula>
        <errorDisplayField>cpm__Amount__c</errorDisplayField>
        <errorMessage>Refund amount must be greater than 0 and cannot exceed the original payment amount.</errorMessage>
    </validationRules>
</CustomObject>